--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,14 @@
 	top: 20px;
 	left: 10px;
 }
+
 .app,
 body {
 	overflow: hidden;
+	font-family: "roboto";
 }
 
-
   
-
 .picker-container {
 	position: absolute;
 	bottom: 0;
