--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,39 @@ code {
 	src: url(./assets/fonts/Milkstore01-Clean.ttf);
 }
 
+@font-face {
+	font-family: 'poxel-font';
+	src: url("./assets/fonts/poxel-font.woff2") format('woff2'),
+	  url("./assets/fonts/poxel-font.woff") format('woff');
+	font-weight: 900;
+	font-style: normal;
+	font-stretch: normal;
+  }
+@font-face {
+	font-family: 'Raleway';
+	src: url(./assets/fonts/Raleway-Regular.ttf);
+  }
+@font-face {
+	font-family: 'M-PLUS';
+	src: url(./assets/fonts/MPLUS1Code-Regular.ttf);
+  }
+@font-face {
+	font-family: 'Comforter';
+	src: url(./assets/fonts/Comforter-Regular.ttf);
+  }
+@font-face {
+	font-family: 'ubuntu';
+	src: url(./assets/fonts/Ubuntu-Regular.ttf);
+  }
+@font-face {
+	font-family: 'Patrick';
+	src: url(./assets/fonts/PatrickHand-Regular.ttf);
+  }
+@font-face {
+	font-family: 'RoadRage';
+	src: url(./assets/fonts/RoadRage-Regular.ttf);
+  }
+  @font-face {
+	font-family: 'Marker';
+	src: url(./assets/fonts/PermanentMarker-Regular.ttf);
+  }
